# opus-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: opus.yml
examples/: decode.rs  encode.rs
opus-sys/: .gitignore  Cargo.toml  build.rs
opus-sys/data/: opus.h
opus-sys/examples/: decode.rs  encode.rs
opus-sys/src/: lib.rs
src/: common.rs  decoder.rs  encoder.rs  lib.rs
