[package]
name = "libopus"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "libopus bindings"
repository = "https://github.com/rust-av/opus-rs"
readme = "README.md"
keywords = ["libopus","opus"]

[features]
default = ["codec-trait"]
codec-trait = ["av-codec", "av-bitstream", "av-data"]

[dependencies]
opus-sys = { version = "0.1.0", path = "opus-sys" }
av-data = { version = "0.2.0", optional = true }
av-bitstream = { version = "0.1.0", optional = true }
av-codec = { version = "0.2.0", optional = true }

[dev-dependencies]
structopt = "0.3"
av-bitstream = "0.1.0"

[workspace]
members = ["opus-sys"]
