[package]
name = "opus-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to libopus"
repository = "https://github.com/rust-av/opus-rs"

build = "build.rs"

[build-dependencies]
bindgen = "0.30"
metadeps = "1.1"

[package.metadata.pkg-config]
opus = "1.2.1"

[dependencies]
