[package]
name = "opus-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to libopus"
repository = "https://github.com/rust-av/opus-rs"

build = "build.rs"

[build-dependencies]
bindgen = "0.37"
metadeps = "1.1"

[package.metadata.pkg-config]
opus = "1.1"

[dev-dependencies]
structopt = "0.2"
av-bitstream = { version = "0.1.0", git = "https://github.com/rust-av/rust-av" }
