[package]
name = "opus-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2018"
license = "MIT"
description = "FFI bindings to libopus"
repository = "https://github.com/rust-av/opus-rs"

build = "build.rs"

[build-dependencies]
bindgen = "0.58"
metadeps = "1.1"

[package.metadata.pkg-config]
opus = "1.3"

[dev-dependencies]
structopt = "0.3"
av-bitstream = "0.1"
